Updated Chat Service

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,33 @@
 spring.max.com.alloowed=10
 
+# Replace domain_name.jks with the name of your certificate file. 
+#server.port=8878
+#server.ssl.key-store =classpath:certificate.p12
+# Enter the password that is contained in the jks-password.txt file.   
+#server.ssl.key-store-password =paSSw0rd@123
+#server.ssl.key-store-password =password
+#server.ssl.key-file=/data/keyFile/
+# Set the certificate keystore type to JKS. The certificate keystore type for a PFX certificate is PKCS12.   
+#server.ssl.keyStoreType =PKCS12
+#server.ssl.enabled=true
+
+
 spring.sse.api=https://eengagesse.abpweddings.com/send/
 
+#First DB
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.driver-class-name=org.postgresql.jdbc.Driver
-spring.datasource.url=jdbc:postgresql://10.132.100.191:5432/postgres?currentSchema=chatservice&connection_limit=10000
+spring.datasource.url=jdbc:postgresql://10.132.100.191:5432/postgres?currentSchema=chatservice&connection_limit=1000
 spring.datasource.username=postgres
 spring.datasource.password=qa_test
 
-spring.jpa.show-sql=true
+
+
+
+
+
+
+spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -34,7 +53,7 @@ server.connection-timeout=10s
 server.max-http-header-size=8KB
 
 server.tomcat.accept-count=100
-server.tomcat.max-connections=10000
+server.tomcat.max-connections=1000
 server.tomcat.max-threads=200
 server.tomcat.min-spare-threads=10
 server.tomcat.max-http-post-size=2MB
@@ -64,3 +83,7 @@ amazon.s3.bucket=testcloud.abpweddings.com
 amazon.s3.accessKey=AKIAU5IMG2CWQGZVI7FP
 amazon.s3.secretKey=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
 cloud.aws.region.static=ap-south-1
+
+
+webpush.public.key=BIN2Jc5Vmkmy-S3AUrcMlpKxJpLeVRAfu9WBqUbJ70SJOCWGCGXKY-Xzyh7HDr6KbRDGYHjqZ06OcS3BjD7uAm8
+webpush.private.key=bdSiNzUhUP6piAxLH-tW88zfBlWWveIx0dAsDO66aVU
