--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Test
 server.port=8083
 #Prod
-#server.port=30022
+#server.port=40022
 #server.contextPath = /engg
 server.servlet.context-path=/messingservice
 
@@ -9,5 +9,9 @@ server.servlet.context-path=/messingservice
 
 socket.host=0.0.0.0
 socket.port=8878
+#server.port.ssl=8878
+#Prod
+#socket.port=30022
 
 spring.profiles.active=dev
+#spring.profiles.active=prod
