--- a/pom.xml
+++ b/pom.xml
@@ -90,11 +90,11 @@
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-aws -->
-		<dependency>
+		<!--<dependency>
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-aws</artifactId>
 		    <version>1.0.3.RELEASE</version>
-		</dependency>
+		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
 		<dependency>
 		    <groupId>com.amazonaws</groupId>
@@ -113,6 +113,37 @@
 	      <artifactId>netty-socketio</artifactId>
 	      <version>2.0.3</version>
 		</dependency>
+		
+		<dependency>
+          <groupId>io.socket</groupId>
+          <artifactId>socket.io-client</artifactId>
+          <version>2.1.0</version>
+       </dependency>
+       
+       <dependency>
+         <groupId>nl.martijndwars</groupId>
+         <artifactId>web-push</artifactId>
+         <version>5.1.1</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-jdk15on</artifactId>
+        <version>1.70</version>
+     </dependency>
+     
+     <dependency>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-java-sdk-elasticache</artifactId>
+          <version>1.10.11</version>
+     </dependency>
+     
+     <dependency>
+       <groupId>com.fasterxml.uuid</groupId>
+       <artifactId>java-uuid-generator</artifactId>
+       <version>4.2.0</version>
+     </dependency>
+
 
 
 	</dependencies>
@@ -147,7 +178,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
-        <!--<profile>
+       <!-- <profile>
             <id>prod</id>
             <properties>
                 <activatedProperties>prod</activatedProperties>
