Messageservice is update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 #Test
-server.port=8083
+#server.port=8083
 #Prod
-#server.port=40022
+server.port=40022
 #server.contextPath = /engg
 server.servlet.context-path=/messingservice
 
 #server.tomcat.max-http-post-size=-1
 
 socket.host=0.0.0.0
-socket.port=8878
+#socket.port=8878
 #server.port.ssl=8878
 #Prod
-#socket.port=30022
+socket.port=30022
 
-spring.profiles.active=dev
-#spring.profiles.active=prod
+#spring.profiles.active=dev
+spring.profiles.active=prod
